force-app/main/default/objects/Sales_Lead__c/Sales_Lead__c.object-meta.xml
<CustomObject>
    <description>Object to Store Sales Lead for Sales Tracker Application</description>
    <label>Sales Lead</label>
    <nameField>
        <displayFormat>SL-{0000}</displayFormat>
        <label>Sales Lead Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>