force-app/main/default/objects/Sales_Lead__c/fields/Converted_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Converted_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Converted Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sales Leads</relationshipLabel>
    <relationshipName>Sales_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>