force-app/main/default/objects/Sales_Lead__c/fields/Expected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Expected_Revenue__c</fullName>
    <formula>Expected_Value__c  *   Probability_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>