force-app/main/default/objects/Sales_Lead__c/fields/Expected_Value__c.field-meta.xml
<CustomField>
    <fullName>Expected_Value__c</fullName>
    <label>Expected Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>