force-app/main/default/objects/Sales_Lead__c/fields/Lead_Priority__c.field-meta.xml
<CustomField>
    <fullName>Lead_Priority__c</fullName>
    <description>System-calculated field that categorizes leads into High, Medium, or Low priority based on lead score.</description>
    <label>Lead Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>