force-app/main/default/objects/Sales_Lead__c/fields/Lead_Title__c.field-meta.xml
<CustomField>
    <fullName>Lead_Title__c</fullName>
    <label>Lead Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>