force-app/main/default/objects/Sales_Lead__c/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <description>Represents chances of closing a lead</description>
    <label>Probability</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>