force-app/main/default/objects/Sales_Lead__c/fields/Probability_Formula__c.field-meta.xml
<CustomField>
    <fullName>Probability_Formula__c</fullName>
    <description>Probability calculation according to Status</description>
    <formula>CASE(
      Status__c ,
     &quot;New&quot;, 0.1,
     &quot;Working&quot;, 0.3,
     &quot;Qualified&quot;, 0.6,
     &quot;Converted&quot;, 1,
     &quot;Closed Lost&quot;, 0,
      0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Probability Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>