force-app/main/default/objects/Sales_Lead__c/validationRules/Email_required_for_selected_lead_source.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_required_for_selected_lead_source</fullName>
    <active>true</active>
    <description>Ensures email is captured for digital lead sources</description>
    <errorConditionFormula>AND(
     OR(
        ISPICKVAL( Source__c , &quot;Website&quot;),
        ISPICKVAL( Source__c , &quot;Email&quot; ),
        ISPICKVAL( Source__c , &quot;Social Media&quot; )
        ),
     ISBLANK( Email__c ) 
)</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Email is required for selected lead source</errorMessage>
</ValidationRule>