force-app/main/default/objects/Sales_Lead__c/validationRules/Expected_Value_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Expected_Value_Must_Be_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Expected_Value__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>Expected_Value__c</errorDisplayField>
    <errorMessage>Expected Value must be greater than zero.</errorMessage>
</ValidationRule>