force-app/main/default/objects/Sales_Lead__c/validationRules/Lock_Closed_Lost_leads_from_editing.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Closed_Lost_leads_from_editing</fullName>
    <active>true</active>
    <description>Currently allows reopening of Closed Lost. Can be restricted using PRIORVALUE if required.</description>
    <errorConditionFormula>ISPICKVAL( Status__c , &quot;Closed Lost&quot;)  &amp;&amp;   NOT(ISCHANGED( Status__c ))</errorConditionFormula>
    <errorMessage>Closed Lost leads cannot be edited</errorMessage>
</ValidationRule>