force-app/main/default/objects/Sales_Lead__c/validationRules/Phone_required_for_Phone_leads.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_required_for_Phone_leads</fullName>
    <active>true</active>
    <description>Ensures Phone is captured for Phone lead sources</description>
    <errorConditionFormula>ISPICKVAL( Source__c , &quot;Phone&quot;)  &amp;&amp;  ISBLANK( Phone__c )</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Phone is required for Phone leads</errorMessage>
</ValidationRule>