force-app/main/default/objects/Sales_Lead__c/validationRules/Referral_must_have_atleast_one_contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Referral_must_have_atleast_one_contact</fullName>
    <active>true</active>
    <description>Ensures there must be at least one contact for Referral lead sources</description>
    <errorConditionFormula>ISPICKVAL( Source__c , &quot;Referral&quot;)  &amp;&amp;  ISBLANK( Email__c )  &amp;&amp;  ISBLANK( Phone__c )</errorConditionFormula>
    <errorMessage>Enter at least Phone or Email for Referral leads</errorMessage>
</ValidationRule>